# Kali-LabWeave

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: design.md  usage.md
scripts/: install.sh
src/kali_labweave/: __init__.py  cli.py  core.py  doctor.py  models.py  report.py  storage.py  utils.py
src/kali_labweave/data/: checklists.json
tests/: test_core.py
