[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kali-labweave"
version = "0.1.0"
description = "Terminal-first Kali Linux lab session journal with scope, notes, evidence hashes, checklists, and Markdown reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Barik (seraphimhub)" }
]
keywords = ["kali", "terminal", "lab", "journal", "evidence", "report"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Logging",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
labweave = "kali_labweave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kali_labweave = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
